added extendable list and removed default styling

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  color: rgba(193, 202, 214, 1);
+  color: rgb(141, 148, 156);
   background-color: rgba(193, 202, 214, 0.2);
   width: auto;
   height: auto;
