--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -3,11 +3,17 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit; 
+}
 
 
 .App {
+  all: initial;
+  * {
+    all: unset;
+  }
+
   display: flex;
   justify-content: left;
-  height: 100vh;
+  height: 100vh; 
 }
