adding hover options

--- a/src/Components/Sidebar/List.scss
+++ b/src/Components/Sidebar/List.scss
@@ -1,9 +1,24 @@
 .category {
   display: block;
+  cursor: pointer;
+  margin-bottom: 2em;
+  background: rgba(255,255,255,0);
 
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+
+  &:hover {
+    transform: translateY(-.3rem);
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, .2);
+
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+  }
 }
 
 .option {
   display: block;
+  cursor: pointer;
 
 }
