--- a/src/Components/Carousel/CarouselBackground.module.scss
+++ b/src/Components/Carousel/CarouselBackground.module.scss
@@ -1,4 +1,4 @@
-@import './CarouselArrow.scss';
+@import './CarouselArrow.module.scss';
 
 .carousel {
 
@@ -16,7 +16,7 @@
         cursor: pointer;
         bottom: 10vh;
 
-        &--next {
+        &Next {
             right: 38vw;
             @include arrow;
 
@@ -25,7 +25,7 @@
             }
         }
 
-        &--prev {
+        &Prev {
             left: 38vw;
             @include arrow;
             transform: scaleX(-1);
@@ -44,14 +44,16 @@
         height: 100vh;
         position: relative;
 
-        &-item {
+        &Item {
             width: 100%;
             height: 100%;
             object-fit: cover;
             filter: brightness(40%)
         }
 
-        &-caption {
+        &Caption {
+            font-family: 'Playfair Display', serif;
+            font-family: normal;
             position: absolute;
             color: gray;
             font-style: italic;
