--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -1,31 +1,39 @@
 .sidebar {
+  all: initial;
+  * {
+    all: unset;
+  }
+
   color: rgb(141, 148, 156);
-  background-color: rgba(193, 202, 214, 0.2);
-  width: auto;
-  height: auto;
-  padding: 1em 1em;
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 2em 2em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
 
   
   .header {
-    height: 4em;
-    
     h1 {
       font-size: 1.5em
     }
   }
   
   .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     height: 100%;
 
     .categoryContainer {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
     
       &:focus {
         .dropdown {
-          display: block;
+          display: flex;
         }
       }
     
@@ -45,22 +53,15 @@
         display: none;
         animation: fazeIn .5s ease-in .1s;
         animation-fill-mode: backwards;
-    
-        .option {
-          display: flex;
-          cursor: pointer;
-        }
+        flex-direction: column;
+        align-items: center;
       }
     }
   }
   
   .footer {
-    height: 1em;
+    font-size: 1.2em;
   }
-  
-  //on hover, font increase
-  //more space b/w cats 
-  
 }
 
 .hoveringButton {
