--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -11,6 +11,13 @@
 
 html {
   font-size: 62.5%;
+  visibility: visible;
+  opacity: 1;
+  animation: showUp 1.5s;
+  animation-delay: .5s;
+  animation-fill-mode: both;
+  // Visibility hidden and opacity 0 is found in index.html between style tag.
+  // Hidden and 0 will load first, hiding the flicker of unstyled content (FOUC) then visible and 1 will load after
 }
 
 body {
@@ -33,4 +40,14 @@ body {
   bottom: 0;
   position: absolute;
   z-index: 1000;
+}
+
+@keyframes showUp {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
