Put carouselfix into index.css

--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -15,6 +15,7 @@ html {
   // Visibility hidden and opacity 0 is found in index.html between style tag.
   // Hidden and 0 will load first, hiding the flicker of unstyled content (FOUC) then visible and 1 will load after
   animation: showUp 1.3s both;
+  // opacity: 1;
 }
 
 body {
