--- a/src/App/Components/Carousel/CarouselArrow.module.scss
+++ b/src/App/Components/Carousel/CarouselArrow.module.scss
@@ -1,6 +1,6 @@
 @import '../../scss/_variables.scss';
 
-// -------------- THE ARROW -------------- //
+// -------------- THE ARROW ANIMATION -------------- //
 @mixin arrow {
     .the_arrow {
         width: $shaft-width;
