--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -36,7 +36,7 @@
       align-items: center;
 
     
-      &:focus {
+      &:focus-within {
         .dropdown {
           display: flex;
         }
