--- a/src/App/scss/_variables.scss
+++ b/src/App/scss/_variables.scss
@@ -1,6 +1,7 @@
 $black: #666;
 $white: orange;
 $gray: #999;
+$primary-color: rgb(141, 148, 156);
 
 $text-arrow-space: 1.6rem;
 $shaft-width: 6.4rem;
