--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -21,9 +21,9 @@
 
   
   .header {
-    h1 {
-      font-size: 1.5em
-    }
+    display: flex;
+    
+
   }
   
   .section {
@@ -36,7 +36,7 @@
       flex-direction: column;
     
       .category {
-        font-size: 1.5em;
+
         display: block;
         cursor: pointer;
       }
