--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -9,7 +9,8 @@
   box-sizing: border-box;
   height: 100%;
   padding: 2em 2em;
-  position: absolute;
+  // position: absolute;
+  position: fixed;
   bottom: 0;
   z-index: 1000;
 
