--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -2,14 +2,22 @@
     height: 100vh;
     width: 100vw;
     position: relative;
+    animation: fadeIn 1.3s;
 
     display: grid;
     grid-template-columns: [sidebar-start]repeat(2, 16.25rem) 
-    [sidebar-end gallery-gap-start] 2rem [gallery-start] repeat(6, 1fr) [gallery-end];
-    // grid-template-rows: 25% 100px auto;
+    [sidebar-end gallery-gap-start] 2rem [gallery-start] repeat(6, 1fr) [gallery-end] 2rem [gallery-end-gap];
+    grid-template-rows: [header-start] 1fr;
 }
 
-.grid {
+.header {
+    grid-column: 5 / 9;
+    grid-row: header-start;
+    font-size: 9rem;
+    justify-self: center;
+}
+
+.subgallery{
     // border: 1rem dashed blue;
     height: 100vh;
     align-content: space-around;
@@ -19,12 +27,15 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(auto-fill, 20rem);
     grid-auto-rows: 20rem;
-    grid-row-gap: 2rem;
-    grid-column-gap: 2rem;
+    grid-gap: 2rem;
 
 }
 
 .child {
     background: red;
-    grid-row: 3/4;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0}
+    100% {opacity: 1}
 }
