--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -2,49 +2,51 @@
     height: 100vh;
     width: 100vw;
     position: relative;
-    animation: fadeIn 1.3s;
+    animation: fadeIn 2s;
 
     display: grid;
     grid-template-columns: [sidebar-start]repeat(2, 16.25rem) 
-    [sidebar-end gallery-gap-start] 2rem [gallery-start] repeat(6, 1fr) [gallery-end] 2rem [gallery-end-gap];
+    [sidebar-end gallery-gap-start] 2rem [gallery-start] 
+    repeat(6, 1fr) [gallery-end] 2rem [gallery-end-gap];
     grid-template-rows: [header-start] 1fr;
 }
 
-.header {
-    grid-column: 5 / 9;
-    grid-row: header-start;
-    font-size: 9rem;
-    justify-self: center;
-}
 
-.sidegallery{
-    // border: 1rem dashed blue;
+.sidegallery {
     height: 100vh;
-    // align-content: space-around;
     grid-column: gallery-start / gallery-end;
     
     display: grid;
-    grid-template-columns: repeat(4, minmax(10rem, 1fr));
-    grid-template-rows: repeat(auto-fit, 20rem);
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-rows: 10rem repeat(auto-fit, 20rem);
     grid-auto-rows: 20rem;
     grid-gap: 10rem 2rem;
 
 }
 
-.sideGalleryItems{
+.header {
+    grid-column: 1 / -1;
+    grid-row-start: 1;
+    font-size: 9rem;
+    justify-self: center;
+}
+
+.sideGalleryItems {
 
     position: relative;
-    display: flex;
+    // display: flex;
+    justify-self: center;
 
     img {
         max-height: 100%;
         max-width: 100%;
+        object-fit: cover;
     }
 
     h1 {
         position: absolute;
-        // align-self: center;
-        // justify-self: center;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
