--- a/src/App/Components/Carousel/CarouselBackground.module.scss
+++ b/src/App/Components/Carousel/CarouselBackground.module.scss
@@ -53,11 +53,11 @@
         }
 
         &Caption {
-            font-family: 'Playfair Display', serif;
-            font-family: normal;
+            // font-family: 'Playfair Display', serif;
+            // font-family: normal;
+            // font-style: italic;
             position: absolute;
             color: gray;
-            font-style: italic;
             font-size: 3rem;
             display: inline-block;
             text-decoration: none;
@@ -69,11 +69,11 @@
     }
 }
 
-.link {
-    border: 5rem dashed transparent;
-    bottom: -2vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    z-index: 100000;
-}
+// .link {
+    // border: 5rem none transparent;
+    // bottom: -2vh;
+    // left: 50vw;
+    // transform: translate(-50%, -50%);
+    // position: absolute;
+    // z-index: 100000;
+// }
