Adjusted brightness overlay depending on if sidebar is open

--- a/src/App/Components/Carousel/CarouselArrow.module.scss
+++ b/src/App/Components/Carousel/CarouselArrow.module.scss
@@ -2,6 +2,9 @@
 
 // -------------- THE ARROW ANIMATION -------------- //
 @mixin arrow {
+
+    animation: fadeIn 2s;
+    
     .the_arrow {
         width: $shaft-width;
         transition: all 0.2s;
@@ -167,4 +170,9 @@
             }
         }
     }
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0}
+    100% {opacity: 1}
 }
