--- a/src/App/Components/Carousel/CarouselBackground.module.scss
+++ b/src/App/Components/Carousel/CarouselBackground.module.scss
@@ -1,12 +1,22 @@
 @import './CarouselArrow.module.scss';
 
+@mixin baseStyle {
+    position: relative;
+    font-family: 'Playfair Display', serif;
+    font-family: normal;
+    animation: fadeIn 1.2s;
+    transition: .5s linear all;
+}
+
 .carousel {
 
-    &__container {
-        position: relative;
-        font-family: 'Playfair Display', serif;
-        font-family: normal;
-        animation: fadeIn 1.2s;
+    &__sidebarClose {
+        @include baseStyle;
+    }
+
+    &__sidebarOpen {
+        @include baseStyle;
+        filter: brightness(40%);
     }
 
     &__arrow {
@@ -49,7 +59,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            filter: brightness(40%)
+            // filter: brightness(40%)
         }
 
         &Caption {
@@ -57,7 +67,7 @@
             // font-family: normal;
             // font-style: italic;
             position: absolute;
-            color: gray;
+            color: #e1deef;
             font-size: 3rem;
             display: inline-block;
             text-decoration: none;
@@ -82,6 +92,7 @@
     0% {opacity: 0}
     100% {opacity: 1}
 }
+
 // .link {
     // border: 5rem none transparent;
     // bottom: -2vh;
