--- a/src/App/scss/_variables.scss
+++ b/src/App/scss/_variables.scss
@@ -1,10 +1,10 @@
-$black: #666;
+$black: white;
 $white: orange;
-$gray: #999;
+$gray: #e1deef;
 $primary-color: rgb(141, 148, 156);
 
 $text-arrow-space: 1.6rem;
 $shaft-width: 6.4rem;
-$shaft-thickness: .1rem;
+$shaft-thickness: .2rem;
 $arrow-head-width: 1.4rem;
 $arrow-head-thickness: $shaft-thickness;
