--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -32,6 +32,7 @@
     justify-self: center;
     margin-top: .4rem;
     display: inline-block;
+    animation: fadeIn 3s;
 
     img {
         width: 100%;
