--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -1,12 +1,3 @@
-// @mixin spin {
-//     grid-column: gallery-start / gallery-end;
-//     height: 100vh;
-//     width: 100%;
-//     background: white;
-//     position: absolute;
-//     z-index: 1000;
-// }
-
 .gallery {
     height: 100vh;
     width: 100vw;
@@ -60,31 +51,23 @@
     }
 }
 
-// .spinner {
-//     @include spin;
-
-// }
-
-// .noSpinner {
-//     @include spin;
-
-//     animation: fadeOut 2s both;
-// }
-
 .noLoadedImages {
-    opacity: 0
+    opacity: 0;
+    visibility: hidden;
 }
 
 .loadedImages {
-    opacity: 1
+    opacity: 1;
+    animation: longerFade 2s both;
+}
+
+@keyframes longerFade {
+    0% {opacity: 0}
+    // 60% {opacity: 0}
+    100% {opacity: 1}
 }
 
 @keyframes fadeIn {
     0% {opacity: 0}
     100% {opacity: 1}
 }
-
-// @keyframes fadeOut {
-//     0% {opacity: 1}
-//     100% {opacity: 0}
-// }
