--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -54,16 +54,18 @@
 .noLoadedImages {
     opacity: 0;
     visibility: hidden;
+    // transition: all 2s linear;
 }
 
 .loadedImages {
     opacity: 1;
     animation: longerFade 2s both;
+    // transition: all 2s linear;
 }
 
 @keyframes longerFade {
     0% {opacity: 0}
-    // 60% {opacity: 0}
+    // 20% {opacity: 0}
     100% {opacity: 1}
 }
 
