--- a/src/App/Components/Sidebar/HamburgerIcon.module.scss
+++ b/src/App/Components/Sidebar/HamburgerIcon.module.scss
@@ -1,45 +1,47 @@
 @import '../../scss/_variables.scss';
+$margin: .3em;
 
 .hamburger {
   position: relative;
   display: block;
-  width: 1em;
+  width: 1.5em;
 
   &::before, 
   &::after,
   & span {
-    background-color: white;
-    border-radius: 3px;
+    background-color: $primary-color;
+    border-radius: .2em;
     content: '';
     display: block;
-    height: 5px;
-    margin: 7px 0;
+    height: 3px;
+    width: 100%;
+    margin: 5px 0px;
+    transition: all ease .2s;
+  }
+
+  &.isActive {
+
+    &::before {
+      transform: 
+        translate(-.31em,.13em)
+        rotate(-45deg)
+        scaleX(.7);
+    }
+    &::after {
+      transform: 
+        translate(-.31em,-.13em)
+        rotate(45deg)
+        scaleX(.7);
+    }
+  }
+
+  // & span {
+  //   height: .22em;
+  // }
+}
+
+@keyframes topToArrow {
+  0% {
 
   }
 }
-
-// .hamburgerInner,
-// .hamburgerInner::before,
-// .hamburgerInner::after {
-//   display: block;
-//   width: .9em;
-//   height: .15em;
-//   background-color: $primary-color;
-//   border-radius: 20%;
-
-//   &::before,
-//   &::after {
-//     position: absolute;
-//     display: block;
-//     content: '';
-//   }
-
-//   &::before {
-//     top: -.5em;
-//   }
-
-//   &::after {
-//     top: .5em;
-//   }
-// }
-
