added lato as font using typeface

--- a/src/App/Components/Carousel/CarouselBackground.module.scss
+++ b/src/App/Components/Carousel/CarouselBackground.module.scss
@@ -63,9 +63,7 @@
         }
 
         &Caption {
-            // font-family: 'Playfair Display', serif;
-            // font-family: normal;
-            // font-style: italic;
+            font-family: 'Lato';
             position: absolute;
             color: #e1deef;
             font-size: 3rem;
