--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -59,9 +59,10 @@
   }
   
   .footer {
-    font-size: 1.2em;
+    font-size: 1em;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin-left: 2.5em;
   }
 }
 
