changed font weight

--- a/src/App/Components/Carousel/CarouselBackground.module.scss
+++ b/src/App/Components/Carousel/CarouselBackground.module.scss
@@ -63,6 +63,7 @@
         }
 
         &Caption {
+            font-weight: 300;
             font-family: 'Lato';
             position: absolute;
             color: #e1deef;
