--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -17,15 +17,18 @@
   display: flex;
   flex-direction: column;
   font-family: 'Lato';
+  font-weight: 300;
 
   
   .header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     
-    & h1 {
+    .title {
       font-size: 2em;
       margin-left: .25em;
+      display: flex;
+      flex-direction: column;
     }
   }
   
@@ -40,31 +43,43 @@
       flex-direction: column;
       
       .category {
-        
         display: block;
         cursor: pointer;
+        font-size: 1.2em;
       }
       
       .categoryItems {
-        padding: 1em;
+        padding-left: 1em;
+        padding-top: .5em;
         display: flex;
         animation: fazeIn .5s ease-in .1s;
         animation-fill-mode: backwards;
         flex-direction: column;
+
+        .categoryItem {
+          height: 1.3em;
+        }
+
         * + * {
           margin-top: .5em;
         }
       }
     }
   }
-  
   .footer {
-    font-size: 1em;
-    display: flex;
+    font-size: .8em;
+    // display: flex;
     flex-direction: column;
-    margin-left: 2.5em;
+    margin-left: 3em;
+    width: 3em;
   }
 }
+
+
+.ig {
+  width: auto;
+}
+
 
 .hoveringButton {
   display: flex;
@@ -77,7 +92,23 @@
     text-shadow: rgba(0, 0, 0, .2) 0m .1em 1em;
     
     h1 {
-      transform: scale(1.01)
+      transform: scale(1.01);
+    }
+  }
+
+  &List:hover {
+    transform: 
+      translateX(.24em)
+      scale(1.1)
+      translateY(.015em);
+  }
+
+  &Active {
+    font-size: 1.1em;
+
+    &:hover {
+      // color: blue;
+      transform: translateX(0em) scale(1);
     }
   }
 }
