added darker gray as secondary color

--- a/src/App/scss/_variables.scss
+++ b/src/App/scss/_variables.scss
@@ -1,7 +1,8 @@
 $black: white;
 $white: orange;
 $gray: #e1deef;
-$primary-color: rgb(141, 148, 156);
+$primary-color-gray: rgb(179, 187, 196);
+$secondary-color-gray: rgb(105, 110, 116);
 
 $text-arrow-space: 1.6rem;
 $shaft-width: 6.4rem;
