--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -7,7 +7,7 @@
     all: unset;
   }
 
-  color: $primary-color;
+  color: $primary-color-gray;
   box-sizing: border-box;
   height: 100%;
   padding: 2.9em;
