added color depending on path

--- a/src/App/Components/Sidebar/HamburgerIcon.module.scss
+++ b/src/App/Components/Sidebar/HamburgerIcon.module.scss
@@ -7,6 +7,14 @@ $margin: .3em;
   width: 1.5em;
   margin-top: .35em;
 
+  &.isDark {
+    &::before, 
+    &::after,
+    & span {
+      background-color: $secondary-color-gray;
+    }
+  }
+
   &::before, 
   &::after,
   & span {
