--- a/src/App/Components/Sidebar/Sidebar.module.scss
+++ b/src/App/Components/Sidebar/Sidebar.module.scss
@@ -7,6 +7,10 @@
     all: unset;
   }
 
+  &.isDark {
+    color: $secondary-color-gray
+  }
+
   color: $primary-color-gray;
   box-sizing: border-box;
   height: 100%;
