--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -19,11 +19,8 @@
 }
 
 .sidegallery {
-
     grid-column: gallery-start / gallery-end;
     columns: 3 24rem;
-    // column-gap: 1.2rem;
-
 }
 
 .sideGalleryItems {
@@ -32,18 +29,11 @@
     justify-self: center;
     margin-top: .4rem;
     display: inline-block;
-    // animation: fadeIn 3s;
 
     img {
         width: 100%;
         object-fit: cover;
     }
-
-    // h1 {
-    //     position: absolute;
-    //     left: 50%;
-    //     transform: translateX(-50%);
-    // }
 
     &:hover {
         filter: brightness(90%);
@@ -51,21 +41,34 @@
     }
 }
 
+.slideshowContainer {
+    grid-column: gallery-start / gallery-end;
+    position: relative;
+}
+
+.goBack {
+    position: absolute;
+    font-size: 3rem;
+    z-index: 10000;
+    cursor: pointer;
+    margin-top: 2rem;
+    bottom: 5rem;
+    left: -27rem;
+}
+ 
 .noLoadedImages {
     opacity: 0;
     visibility: hidden;
-    // transition: all 2s linear;
 }
 
 .loadedImages {
     opacity: 1;
-    animation: longerFade 2s both;
-    // transition: all 2s linear;
+    animation: longerFade 1s both;
 }
 
 @keyframes longerFade {
     0% {opacity: 0}
-    // 20% {opacity: 0}
+    50% {opacity: 0}
     100% {opacity: 1}
 }
 
