When going back from slideshow, the masonry gallery shows again

--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -44,6 +44,17 @@
 .slideshowContainer {
     grid-column: gallery-start / gallery-end;
     position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.show {
+    opacity: 1;
+}
+
+.hidden {
+    opacity: 0;
+    visibility: hidden
 }
 
 .goBack {
